--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@types/payment": "2.1.3",
     "@types/prismjs": "1.16.6",
     "@types/react": "18.0.8",
-    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-credit-cards": "0.8.1",
     "@types/react-datepicker": "4.3.2",
     "@types/react-draft-wysiwyg": "1.13.3",
