--- a/package.json
+++ b/package.json
@@ -66,10 +66,12 @@
     "react-dom": "18.1.0",
     "react-draft-wysiwyg": "1.14.7",
     "react-dropzone": "14.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "7.3.0",
     "react-hot-toast": "2.1.1",
     "react-i18next": "11.14.3",
     "react-kakao-login": "^2.1.1",
+    "react-naver-login": "^0.1.4",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.2.5",
     "react-redux": "8.0.1",
