--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/nprogress": "0.2.0",
     "@types/payment": "2.1.3",
     "@types/prismjs": "1.16.6",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.8",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-credit-cards": "0.8.1",
