--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-redux": "8.0.1",
     "react-router-dom": "^6.4.2",
     "react-to-pdf": "0.0.14",
+    "reactstrap": "^9.1.5",
     "recharts": "2.1.6",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.1",
