--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "clsx": "1.1.1",
     "date-fns": "2.27.0",
     "draft-js": "0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "9.7.0",
+    "html-to-draftjs": "^1.5.0",
     "i18next": "21.7.1",
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-http-backend": "1.3.1",
@@ -86,6 +88,8 @@
     "@mdi/js": "^7.0.96",
     "@types/cleave.js": "1.4.6",
     "@types/draft-js": "0.11.8",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "17.0.31",
     "@types/nprogress": "0.2.0",
@@ -108,6 +112,7 @@
     "eslint-plugin-import": "2.25.4",
     "next-transpile-modules": "9.0.0",
     "prettier": "2.6.2",
+    "react-query": "^3.39.2",
     "typescript": "4.6.4"
   }
 }
