--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fullcalendar/react": "5.10.1",
     "@fullcalendar/timegrid": "5.10.1",
     "@hookform/resolvers": "2.4.0",
+    "@iconify/react": "^4.0.1",
     "@mdi/react": "^1.6.1",
     "@mui/lab": "5.0.0-alpha.80",
     "@mui/material": "5.6.4",
