--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3002 next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -28,7 +28,6 @@
     "@fullcalendar/react": "5.10.1",
     "@fullcalendar/timegrid": "5.10.1",
     "@hookform/resolvers": "2.4.0",
-    "@iconify/react": "^4.0.1",
     "@mdi/react": "^1.6.1",
     "@mui/lab": "5.0.0-alpha.80",
     "@mui/material": "5.6.4",
@@ -74,6 +73,7 @@
     "react-hook-form": "7.3.0",
     "react-hot-toast": "2.1.1",
     "react-i18next": "11.14.3",
+    "react-icons": "^4.7.1",
     "react-kakao-login": "^2.1.1",
     "react-naver-login": "^0.1.4",
     "react-perfect-scrollbar": "1.5.8",
@@ -83,6 +83,8 @@
     "react-to-pdf": "0.0.14",
     "reactstrap": "^9.1.5",
     "recharts": "2.1.6",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.1",
     "yup": "0.32.9"
@@ -105,6 +107,7 @@
     "@types/react-datepicker": "4.3.2",
     "@types/react-draft-wysiwyg": "1.13.3",
     "@types/react-redux": "7.1.24",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "5.6.0",
     "@typescript-eslint/parser": "5.11.0",
     "eslint": "8.14.0",
